--- a/backoffice-domain.yaml
+++ b/backoffice-domain.yaml
@@ -5,7 +5,7 @@ metadata:
   title: Backoffice System
   description: Handles internal operations like shipment logistics and invoice management.
   annotations:
-    backstage.io/techdocs-ref: https://gitlab.com/ch-mc-b/autoshop-ms/app/backoffice
+    backstage.io/techdocs-ref: .
 spec:
   owner: backoffice-team
 
