--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -36,7 +36,8 @@ spec:
   lifecycle: production
   owner: backoffice-team
   system: backoffice-system
-  definition: ./openapi/shipment.yaml
+  definition: 
+    $text: ./openapi/shipment.yaml
   providesApis:
     - backoffice-shipment-api
 
@@ -65,6 +66,7 @@ spec:
   lifecycle: production
   owner: backoffice-team
   system: backoffice-system
-  definition: ./openapi/invoicing.yaml
+  definition: 
+    $text: ./openapi/invoicing.yaml
   providesApis:
     - backoffice-invoicing-api
